===================================
gnome-commander 1.4.1
---------------

Bug fixes:
 * Fixed problem bgo#641842 (use poppler-glib instead of poppler internal API)
New features:
* New or updated translations: 
     ...
* New key bindings:
     ...            ...


===================================
gnome-commander 1.4.0
---------------

Bug fixes:
 * Fixed problem bgo#377463 (mkdir dialog loses focus)
 * Fixed problem bgo#492479 (file replace prompt must show date and size of files)
 * Fixed problem bgo#617140 (GNOME Goal: Use accessor functions instead direct access)
 * Fixed problems bgo#632064, bgo#632208, bgo#633107, bgo#633167, bgo#633331, bgo#634972, bgo#637873, bgo#638059 (bugs in gnome-commander-help.master.po)
 * Fixed problem bgo#660043 (shortcut ALT+DOWN not documented)
 * Fixed problem bgo#660268 (remember directory history between sessions)
 * Fixed problem bgo#667080 (delete confirmation defaults to YES/OK)
 * Fixed Ubuntu problem #117226 (bookmarks unification)
 * Fixed problem with right mouse button selection not being precise
 * Fixed problem bgo#696227 (detect and support libgsf >= 1.14.26)
 * Fixed problem bgo#684527 (Fixed typos in strings)
 * Fixed problem bgo#660063 (define ALT+DOWN binding as user definable: view.dir_history)
 * Fixed problem bgo#642178 (lock tabs for prev/next buttons)

New features:
 * Support for tabs
 * Revamped bookmarks dialog
 * Revamped file properties dialog
 * One instance mode
 * New colour theme: green tiger
 * User defined LS_COLORS colours
 * Possibility to select/deselect files only
 * Support for automatic width counters in advanced file rename
 * Enhanced file name matching in quick search
 * Open terminal with administrator privileges 
 * Prompt to confirm drag & drop operations
 * Right click popup menu for copying in internal viewer
 * --config-dir command line option for customized location of config files
 * Several speed improvements including C++ rework and code cleanups